# llm-pareto-benchmarks

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: provider_prices.toml  vendor_claims.toml
docs/: methodology.md  schema.sql  source_terms.md
profiles/: coding_agent_balanced.toml  finance_deep_research_under_3.toml  general_chat_cheap.toml
research/: leaderboard_census.csv
src/llm_pareto/: __init__.py  cli.py  cost.py  dashboard.py  fetch.py  identity.py  pareto.py  pipeline.py  recommend.py  reporting.py  routes.py  server.py
src/llm_pareto/adapters/: aider_polyglot.py  artificial_analysis.py  base.py  llm_stats.py  openrouter.py  vendor_claims.py
src/llmmeta/: __init__.py  analysis.py  analytics.py  cli.py  dashboard.py  discovery.py  explain.py  fetch.py  models.py  normalization.py  pipeline.py  query_compiler.py  recommend.py  reporting.py  router.py  scoring.py  server.py  store.py  viz.py
src/llmmeta/adapters/: __init__.py  artificial_analysis.py  hf_official.py  lmarena.py  openevals.py  provider_pricing.py  vendor_claims.py
tests/: test_access.py  test_adapters.py  test_analysis_viz2.py  test_core.py  test_lineage_routes.py  test_llm_stats.py  test_query_compiler.py  test_router.py  test_server.py  test_tier_bc.py  test_vendor_claims.py  test_viz.py
tests/fixtures/artificial_analysis/: sample_data.json
tests/fixtures/hf_official_leaderboard/: sample.json
tests/fixtures/hf_openevals/: sample.json
tests/fixtures/llm_stats/: sample.json
tests/fixtures/lmarena/: sample.json
(+2 files in other folders)
